# local-ops-notebook

./: .gitignore  CHANGELOG.md  README.md  build_exe.cmd  config.example.yaml  config.yaml  dev-requirements.txt  ops_notebook_entry.py  pyproject.toml  run.cmd  schedule_install.cmd  schedule_uninstall.cmd  scheduled_run.cmd  scheduled_run_exe.cmd
.github/workflows/: ci.yml  release.yml
local_ops_notebook.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notes/: sample_note.md
ops_notebook/: __init__.py  cli.py
ops_notebook/core/: config.py  constants.py  doctor.py  hashing.py  rag_cache.py  rag_client.py  report.py  scanner.py  snapshots.py  state.py  weekly.py
reports/: 2026-W01.md
templates/: weekly_report_template.md
tests/: test_report_generation.py
