[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ops-notebook"
version = "0.3.2"
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.3",
  "PyYAML==6.0.2",
]

[tool.setuptools]
packages = ["ops_notebook"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
